[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/zom.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 3.5
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 14.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7, 13.5 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 45
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 8 )

[node name="floor_checker" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 20 )
collision_mask = 12

[node name="sides_check" type="Area2D" parent="."]
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="sides_check"]
position = Vector2( -1, 3.5 )
shape = SubResource( 9 )

[connection signal="body_entered" from="sides_check" to="." method="_on_sides_check_body_entered"]
